Display multiple characters side by side

--- a/src/main.css
+++ b/src/main.css
@@ -2,7 +2,13 @@ body {
   font-family: sans-serif;
 }
 
-.pixel-grid {
+.custom-chars {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.custom-char {
+  background-color: #eee;
   display: inline-grid;
   grid-template-columns: repeat(5, 1fr);
 }
