--- a/src/main.css
+++ b/src/main.css
@@ -1,22 +1,11 @@
-@font-face {
-  font-family: "Source Sans";
-  font-display: swap;
-  src: url("fonts/SourceSans3VF-Upright.ttf.woff2");
+.container-fluid {
+  width: 768px;
 }
 
-@font-face {
-  font-family: "Source Sans";
-  font-style: italic;
-  font-display: swap;
-  src: url("fonts/SourceSans3VF-Italic.ttf.woff2");
-}
-
-body {
-  background-color: #fff;
-  color: #333;
-  font:
-    1rem "Source Sans",
-    sans-serif;
+.canvas-wrapper {
+  display: flex;
+  justify-content: center;
+  margin: 1rem auto;
 }
 
 .custom-characters {
@@ -34,19 +23,12 @@ body {
   flex-direction: column;
 }
 
-.custom-character-code {
-  border: 0;
-  color: #aaa;
-  text-align: center;
-}
-
 .custom-character-input {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  line-height: 0;
 }
 
 .custom-character-input input {
-  border: 0;
-  margin: 1px;
-  padding: 0;
+  margin: 0;
 }
