--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,8 @@
+h1 {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
 .container-fluid {
   width: 768px;
 }
@@ -9,10 +14,6 @@
 
 .custom-characters {
   display: flex;
-  gap: 1rem;
-  justify-content: center;
-  margin: 0 auto;
-  width: 0;
 }
 
 .custom-character {
