--- a/src/main.css
+++ b/src/main.css
@@ -11,6 +11,10 @@
   src: url("fonts/SourceSans3VF-Italic.ttf.woff2");
 }
 
+a {
+  color: #000;
+}
+
 body {
   font-family: "Source Sans", sans-serif;
 }
@@ -18,6 +22,13 @@ body {
 h1 {
   font-size: 1.5rem;
   font-weight: 400;
+  margin: 1rem 0;
+}
+
+h2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  margin: 1rem 0;
 }
 
 .container-fluid {
