--- a/src/main.css
+++ b/src/main.css
@@ -23,6 +23,13 @@ body {
   font-family: "Source Sans", sans-serif;
 }
 
+code {
+  background-color: #eee;
+  color: #000;
+  font-family: "Source Sans", sans-serif;
+  font-size: 1rem;
+}
+
 h1 {
   font-size: 1.5rem;
   font-weight: 400;
