--- a/src/main.css
+++ b/src/main.css
@@ -55,6 +55,11 @@ h2 {
   width: 768px;
 }
 
+.modal-footer {
+  border: 0;
+  padding-top: 0;
+}
+
 .canvas-wrapper {
   display: flex;
   justify-content: center;
@@ -79,4 +84,9 @@ h2 {
 
 .custom-character-input input {
   margin: 0;
+}
+
+.share-url {
+  font-size: 120%;
+  word-break: break-all;
 }
