--- a/src/main.css
+++ b/src/main.css
@@ -57,6 +57,10 @@ h2 {
   width: 768px;
 }
 
+.modal-content {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1) !important;
+}
+
 .modal-footer {
   border: 0;
   padding-top: 0;
